[package]
name = "accurecny"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.17"
clap_derive = "4.5.13"
clio = {version = "0.3.5", features=["clap-parse"]}
csv = "1.3.0"
nix = { path="nix", features = ["socket", "net", "uio", "ioctl"]}
pnet = "0.35.0"
quiche = { path="quiche/quiche", features = ["qlog"] }
qlog = { path="quiche/qlog" }
serde = { version = "1.0.210", features=["derive"]}
slog = "2.7.0"
slog-term = "2.9.1"
tokio = {version = "^1.40.0", features=["full", "rt"]}
mio = { version = "0.8", features = ["net", "os-poll"] }
ring = "0.17.8"
http = "1.0.0"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls"]}
serde_json = "1.0.129"
